# qt-opam

./: Qt5.opam  Qt6.opam  README.md  conf-qt5-option-devbuild.opam  conf-qt5-option-silent.opam  conf-qt5-option-verbose.opam
.github/workflows/: v5.15.2.yml  v6.0.2.yml
