opam-version: "2.0"

version: "5.15.2"
synopsis: "Qt"
description: """\
Qt """
maintainer: "kakadu@pm.me"
authors: "TODO"
license: "LGPL-3.0-or-later"
homepage: "https://github.com/Kakadu/qt-opam"
doc: "https://github.com/Kakadu/qt-opam"
bug-reports: "https://github.com/Kakadu/qt-opam/issues"

depends: [
  "ocaml" {>= "4.04.1" & < "4.13"}
]
build: [
  ["find" "."]
]
dev-repo: "git+https://github.com/ocaml-ppx/ppxlib.git"
url {
  src:
    "https://download.qt.io/archive/qt/5.15/5.15.2/single/qt-everywhere-src-5.15.2.tar.xz"
  checksum: [
    "sha256=3a530d1b243b5dec00bc54937455471aaa3e56849d2593edb8ded07228202240"
    "sha512=e7d22cf22e9baa5622f5075ec1b60536ef05c474370a410b6b0a33a4645389b46471e0a38da679e42e9b6ee750bc784f19eb166975f5e4958bc5123a571ea2f0"
  ]
}
