opam-version: "2.0"

version: "5.15.2"
synopsis: "Qt"
description: """\
Qt """
maintainer: "kakadu@pm.me"
authors: "TODO"
license: "LGPL-3.0-or-later"
homepage: "https://github.com/Kakadu/qt-opam"
bug-reports: "https://github.com/Kakadu/qt-opam/issues"
doc: "https://github.com/Kakadu/qt-opam"

depends: [
  "ocaml" {>= "4.04.1" & < "4.13"}
]
build: [
  ["tar" "-xf" "qtsrc.tar.xz" "-C" "." "--strip-components=1" ]
  #["./configure" "--help" ]
  ["./configure"
       "-ltcg"
       "-no-pch"
       "-no-feature-cxx14_make_unique"
       "-opensource"
       "-confirm-license"
       "-debug"
       "-prefix"       "%{prefix}%"
       "-no-glib"
       "-no-widgets"
       "-no-linuxfb"
       "-make"         "libs"
       "-nomake"       "examples"
       "-nomake"       "tests"

       "-skip" "qtconnectivity"
       "-skip" "qttools"
       "-skip" "qtmultimedia"
       "-skip" "qtwebengine"
       "-skip" "qtlocation"
       "-skip" "qtwayland"
       "-skip" "qt3d"
       "-skip" "qtscxml"
       "-skip" "qtsensors"
       "-skip" "qtgamepad"
       "-skip" "qtserialport"
       "-skip" "qtxmlpatterns"
       "-skip" "qtdoc"
       "-skip" "qtquick3d"
       "-skip" "qtpurchasing"
       "-skip" "qtquickcontrols"
       #"--list-features"

       "-no-dbus"
       "-no-feature-vulkan"
       "-no-feature-itemmodeltester"
       "-no-feature-sqlmodel"
       "-no-feature-tuiotouch"
       "-no-feature-imageformat_ppm"
       "-no-feature-colordialog"
       "-no-feature-dialog"
       "-no-feature-dialogbuttonbox"
       "-no-feature-errormessage"
       "-no-feature-fontdialog"
       "-no-feature-inputdialog"
       "-no-feature-messagebox"
       "-no-feature-printdialog"
       "-no-feature-printpreviewdialog"
       "-no-feature-progressdialog"
       "-no-feature-wizard"
       "-no-feature-dom"
       "-no-feature-filedialog"
       "-no-feature-filesystemmodel"
       "-no-feature-filesystemwatcher"
       #"-no-feature-temporaryfile"
       "-no-feature-filesystemiterator"
       "-no-feature-dirmodel"
       "-no-feature-iconv"
       "-no-feature-big_codecs"
       #"-no-feature-textcodec"
       "-no-feature-codecs"
       "-no-feature-translation"
       "-no-feature-sharedmemory"
       "-no-feature-systemsemaphore"
       "-no-feature-concurrent"
       "-no-feature-textmarkdownreader"
       "-no-feature-textmarkdownwriter"
       "-no-feature-sessionmanager"
       "-no-feature-textodfwriter"
       "-no-feature-cssparser"
       "-no-feature-texthtmlparser"
       #"-no-feature-highdpiscaling"
       #"-feature-highdpiscaling"
       "-no-feature-im"
       "-no-feature-shortcut"
       "-no-feature-cursor"
       "-no-feature-action"
       "-no-feature-tabletevent"
       "-no-feature-bearermanagement"
       "-no-feature-dnslookup"
       "-no-feature-dtls"
       "-no-feature-ftp"
       "-no-feature-gssapi"
       "-no-feature-ocsp"
       "-no-feature-localserver"
       "-no-feature-netlistmgr"
       "-no-feature-networkinterface"
       "-no-feature-socks5"
       "-no-feature-sspi"
       "-no-feature-raster-64bit"
       "-no-feature-pdf"
       "-no-feature-printer"
       "-no-feature-cups"
       "-no-feature-colornames"
       "-no-feature-picture"
       "-no-feature-datawidgetmapper"
       "-no-feature-abstractbutton"
       "-no-feature-contextmenu"
       "-no-feature-abstractslider"
       "-no-feature-scroller"
       "-no-feature-formlayout"
       "-no-feature-graphicsview"
       "-no-feature-checkbox"
       "-no-feature-fontcombobox"
       "-no-feature-pushbutton"
       "-no-feature-calendarwidget"
       "-no-feature-mdiarea"
       "-no-feature-resizehandler"
       "-no-feature-radiobutton"
       "-no-feature-dial"
       "-no-feature-label"
       "-no-feature-commandlinkbutton"
       "-no-feature-keysequenceedit"
       "-no-feature-printpreviewwidget"
       "-no-feature-toolbox"
       "-no-feature-sizegrip"
       "-no-feature-combobox"
       "-no-feature-listwidget"
       "-no-feature-tablewidget"
       "-no-feature-lcdnumber"
       "-no-feature-mainwindow"
       "-no-feature-toolbar"
       "-no-feature-menu"
       "-no-feature-menubar"
       "-no-feature-toolbutton"
       "-no-feature-scrollbar"
       "-no-feature-lineedit"
       "-no-feature-slider"
       "-no-feature-spinbox"
       "-no-feature-stackedwidget"
       "-no-feature-tabbar"
       "-no-feature-widgettextcontrol"
       "-no-feature-splitter"
       "-no-feature-graphicseffect"
       "-no-feature-treewidget"
       "-no-feature-groupbox"
       "-no-feature-syntaxhighlighter"
       "-no-feature-dockwidget"
       "-no-feature-datetimeedit"
       "-no-feature-textbrowser"
       "-no-feature-buttongroup"
       "-no-feature-progressbar"
       "-no-feature-statusbar"
       "-no-feature-tooltip"
       "-no-feature-textedit"
       "-no-feature-scrollarea"
       "-no-feature-splashscreen"
       "-no-feature-tabwidget"
       "-no-feature-statustip"
       "-no-feature-rubberband"
       "-no-feature-validator"
       "-feature-settings"
       "-silent"               #{conf-qt5-option-silent:installed}
       "-v"                    {conf-qt5-option-verbose:installed}
  ]
  [ make "-j%{jobs}%"  ]
]
install: [ make "install"]

depexts: [
  [ "libxcb-sync-dev" "libxcb-xinput-dev" "libxcb-xkb-dev" "libxcomposite-dev" "libxdamage-dev" "libxft-dev"
    "libxkbcommon-x11-dev" "libopengl-dev" "libxcb-xinerama0-dev" ] {os-family = "debian"}
]


dev-repo: "git+https://github.com/Kakadu/qt-opam.git"
extra-source "qtsrc.tar.xz" {
  src:
    "https://download.qt.io/archive/qt/5.15/5.15.2/single/qt-everywhere-src-5.15.2.tar.xz"
  checksum: [
    "sha256=3a530d1b243b5dec00bc54937455471aaa3e56849d2593edb8ded07228202240"
    "sha512=e7d22cf22e9baa5622f5075ec1b60536ef05c474370a410b6b0a33a4645389b46471e0a38da679e42e9b6ee750bc784f19eb166975f5e4958bc5123a571ea2f0"
  ]
}
