opam-version: "2.0"

version: "6.2.0"
synopsis: "Qt"
description: """\
Qt """
maintainer: "kakadu@pm.me"
authors: "TODO"
license: "LGPL-3.0-or-later"
homepage: "https://github.com/Kakadu/qt-opam"
bug-reports: "https://github.com/Kakadu/qt-opam/issues"
doc: "https://github.com/Kakadu/qt-opam"

# https://lists.qt-project.org/pipermail/interest/2014-May/012236.html

depends: [
  #"ocaml" {>= "4.04.1" & < "4.13"}
]
build: [
  ["tar" "-xf" "qtsrc.tar.xz" "-C" "." "--strip-components=1" ]
  ["./configure"
      "-no-pch"              # disabling precompiled headers allow to remove more code in #ifdefs
      "-opensource"
      "-confirm-license"

      "-prefix"       "%{prefix}%"
      "-debug"                 {  conf-qt6-option-devbuild:installed}
      "-release"               {! conf-qt6-option-devbuild:installed}
      "-optimize-size"         {! conf-qt6-option-devbuild:installed}
      "-strip"                {! conf-qt6-option-devbuild:installed}

      "-no-glib"
      "-no-widgets"
      "-no-linuxfb" "-no-directfb"
      "-no-egl"
      "-no-eglfs"
      "-no-evdev"
      "-no-kms"
      #"-no-freetype"
      #"-no-harfbuzz"
      "-no-xcb-xlib"               # yes, it still gives us libqxcb.so

      "-no-icu"
      #"-no-iconv"
      "-no-mimetype-database"
      "-no-qml-debug"
      "-no-dbus"
      "-no-gif" "-no-ico"
      #"-system-zlib"      "-system-libpng"      "-system-libjpeg"

      "-make"         "libs"
      "-nomake"       "examples"
      "-nomake"       "tests"
      "-nomake"       "tools"             # no QtCreator, QtDesigner

       "-skip" "qt3d"
       "-skip" "qtconnectivity"
       "-skip" "qtdoc"
       "-skip" "qtgamepad"
       "-skip" "qtmultimedia"
       "-skip" "qtlocation"
       "-skip" "qtlottie"
       "-skip" "qtpurchasing"
       "-skip" "qtquick3d"
       "-skip" "qtquickcontrols"
       "-skip" "qtremoteobjects"
       "-skip" "qtscript"
       "-skip" "qtscxml"
       "-skip" "qtsensors"
       "-skip" "qtserialport"
       "-skip" "qtserialbus"
       "-skip" "qtspeech"
       "-skip" "qttranslations"
       "-skip" "qttools"
       "-skip" "qtvirtualkeyboard"
       "-skip" "qtwayland"
       "-skip" "qtwebengine"
       "-skip" "qtxmlpatterns"
       "-skip" "qtsql"
       #"--list-features"

       "-no-dbus"
       "-no-feature-vulkan"
       "-no-feature-itemmodeltester"
       "-no-feature-sqlmodel"
       "-no-feature-tuiotouch"
       "-no-feature-imageformat_ppm"
       "-no-feature-colordialog"
       "-no-feature-dialog"
       "-no-feature-dialogbuttonbox"
       "-no-feature-errormessage"
       "-no-feature-fontdialog"
       "-no-feature-inputdialog"
       "-no-feature-messagebox"
       "-no-feature-printdialog"
       "-no-feature-printpreviewdialog"
       "-no-feature-progressdialog"
       "-no-feature-wizard"
       "-no-feature-dom"
       "-no-feature-filedialog"
       "-no-feature-filesystemmodel"
       "-no-feature-filesystemwatcher"
       #"-no-feature-temporaryfile"
       #"-no-feature-filesystemiterator"
       #"-no-feature-dirmodel"
       #"-no-feature-iconv"
       #"-no-feature-big_codecs"
       #"-no-feature-textcodec"

       #"-no-feature-translation"                  # required for QtObject:setUiLanguage (Maybe bug?)
       "-no-feature-sharedmemory"
       #"-no-feature-systemsemaphore"              # required by qtbase/src/tools/androidtestrunner
       "-no-feature-concurrent"
       #"-no-feature-textmarkdownreader"
       #"-no-feature-textmarkdownwriter"
       "-no-feature-sessionmanager"
       "-no-feature-textodfwriter"
       "-no-feature-cssparser"
       "-no-feature-texthtmlparser"
       #"-no-feature-highdpiscaling"
       #"-feature-highdpiscaling"
       "-no-feature-im"
       #"-no-feature-shortcut"
       "-no-feature-cursor"
       "-no-feature-action"
       "-no-feature-tabletevent"

       "-no-feature-dnslookup"
       "-no-feature-dtls"
       "-no-feature-gssapi"
       "-no-feature-ocsp"
       "-no-feature-localserver"
       "-no-feature-netlistmgr"
       "-no-feature-networkinterface"
       "-no-feature-socks5"
       "-no-feature-sspi"
       "-no-feature-raster-64bit"
       "-no-feature-pdf"
       "-no-feature-printer"
       "-no-feature-cups"
       "-no-feature-colornames"
       "-no-feature-picture"
      #"-no-feature-qml-locale"            # qml-locate is requried by qtquickcontrols2/src/quicktemplates2/qquickstackelement.cpp
       "-no-feature-datawidgetmapper"
       "-no-feature-abstractbutton"
       "-no-feature-contextmenu"
       "-no-feature-abstractslider"
       "-no-feature-scroller"
       "-no-feature-formlayout"
       "-no-feature-graphicsview"
       "-no-feature-checkbox"
       "-no-feature-fontcombobox"
       "-no-feature-pushbutton"
       "-no-feature-calendarwidget"
       "-no-feature-mdiarea"
       "-no-feature-resizehandler"
       "-no-feature-radiobutton"
       "-no-feature-dial"
       "-no-feature-label"
       "-no-feature-commandlinkbutton"
       "-no-feature-keysequenceedit"
       "-no-feature-printpreviewwidget"
       "-no-feature-toolbox"
       "-no-feature-sizegrip"
       "-no-feature-combobox"
       "-no-feature-listwidget"
       "-no-feature-tablewidget"
       "-no-feature-lcdnumber"
       "-no-feature-mainwindow"
       "-no-feature-toolbar"
       "-no-feature-menu"
       "-no-feature-menubar"
       "-no-feature-toolbutton"
       "-no-feature-scrollbar"
       "-no-feature-lineedit"
       "-no-feature-slider"
       "-no-feature-spinbox"
       "-no-feature-stackedwidget"
       "-no-feature-tabbar"
       "-no-feature-widgettextcontrol"
       "-no-feature-splitter"
       "-no-feature-graphicseffect"
       "-no-feature-treewidget"
       "-no-feature-groupbox"
       "-no-feature-syntaxhighlighter"
       "-no-feature-dockwidget"
       "-no-feature-datetimeedit"
       "-no-feature-textbrowser"
       "-no-feature-buttongroup"
       "-no-feature-progressbar"
       "-no-feature-statusbar"
       "-no-feature-tooltip"
       "-no-feature-textedit"
       "-no-feature-scrollarea"
       "-no-feature-splashscreen"
       "-no-feature-tabwidget"
       "-no-feature-statustip"
       "-no-feature-rubberband"
       "-feature-validator"          # for qquicktextinput.cpp

       "-feature-settings"
       "-silent"               #{conf-qt5-option-silent:installed}
       "-v"                    {conf-qt6-option-verbose:installed}
  ]
  [ make "-j%{jobs}%"  ]
]
install: [
  [ "strip" "qtbase/bin/qmake" ]                 # even with -strip configure options qmake is not stripped
  [ make "install"]
]

depexts: [
  # https://wiki.qt.io/Building_Qt_5_from_Git#Linux.2FX11
  [ "build-essential" "cmake" #"perl" "python"
    "libxcb-sync-dev" "libxcb-xinput-dev" "libxcb-xkb-dev" "libxcomposite-dev" "libxdamage-dev" "libxft-dev"
    "libxkbcommon-x11-dev" "libopengl-dev" "libxcb-xinerama0-dev"
    "'^libxcb.*-dev'" "libx11-xcb-dev" "libglu1-mesa-dev" "libxrender-dev" "libxi-dev"
    "libxkbcommon-dev" "libxkbcommon-x11-dev"
    "libclang-11-dev"
  ] {os-family = "debian"}
]


dev-repo: "git+https://github.com/Kakadu/qt-opam.git"
extra-source "qtsrc.tar.xz" {
  src:
    "https://download.qt.io/archive/qt/6.0/6.2.0/single/qt-everywhere-src-6.2.0.tar.xz"
  checksum: [
    "sha256=60c2dc0ee86dd338e5c5194bd95922abfc097841e3e855693dfb4f5aaf0db4db"
    "sha512=d4cd2457e08491d06892de0fd156eb77ff77a96d263faac3720e9db3ed720bbf15c0f0f0357131ce108e374037407bced4d6a68e8135d46ca746deac81c0c996"
  ]
}
